--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,3 +8,6 @@
     {% endfor %}
   </nav>
 </header>
+
+<div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="ozarate" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://bo.linkedin.com/in/ozarate?trk=profile-badge">Oswaldo Limbert Zárate</a></div>
+              
