--- a/_sass/1-tools/_icon-font.scss
+++ b/_sass/1-tools/_icon-font.scss
@@ -8,7 +8,7 @@
 
 [class^="icon-"], [class*=" icon-"] {
   font-family: "icomoon";
-  line-height: 100%;
+  line-height: 3.5;
   
   /* Add 1px margin-top to center the icon */
   display: block;
