--- a/_includes/code.html
+++ b/_includes/code.html
@@ -1,6 +1,6 @@
 <div class="image-container">
   <a href="{{ include.url }}" target="_blank">
-    <img src="{{ site.github.url }}/assets/img/{{ include.code }}" alt="Avatar" class="image">
+    <img src="{{ site.github.url }}/assets/img/{{ include.code }}" alt="Avatar" class="code">
     <div class="overlay">
       <div class="text">
         {% if include.text %}
