--- a/_includes/image.html
+++ b/_includes/image.html
@@ -6,7 +6,7 @@
         {% if include.text %}
           {{ include.text }} <i class="fa fa-arrow-right" aria-hidden="true"></i>
         {% else %}
-          View Demo <i class="fa fa-arrow-right" aria-hidden="true"></i>
+          Ver Código (View Code)<i class="fa fa-arrow-right" aria-hidden="true"></i>
         {% endif %}
       </div>
     </div>
