--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,9 @@
       <a href="{{ site.github.url }}/{{ item.url }}">{{ item.name }}</a>
     {% endfor %}
   </nav>
+  <div ></div>
   <img src="/assets/img/projects/proj-1/osveloper-350x180.gif" alt="logo"/>
+  </div>
 </header>
 
 
