--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,10 @@
     {% seo %}
   </head>
   <body>
+    <a href="index.md">
+      <img src="/assets/img/projects/proj-1/osveloper-350x180.gif" width="300px" height="100px"
+      alt="Haz clic aquí para volver a la página de inicio">
+    </a>
     <div class="site-container">
       {% include header.html %}
       {{ content }}
