--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -8,7 +8,7 @@ header
       weight: 700
     a
       display: inline-block
-      color: rgba(0,0,0,1)
+      color: #fd0606f5
       &:hover
         color: $accent-color
   nav
