--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -4,7 +4,7 @@
 //------------------------------------------------
 // Set some colors as sass variables
 
-$accent-color: #f7f3f2
+$accent-color: #c9c5c5
 $accent: #c99065
 $accent-light: adjust-hue(saturate(lighten($accent, 11%), 12.6%), 14%)
 $selectionColor: lighten($accent, 30%)
