--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,8 @@
     {% seo %}
   </head>
   <body>
-    <a href="index.md">
-      <img src="/assets/img/projects/proj-1/osveloper-300x150.gif" width="300px" height="150px"
-      alt="Haz clic aquí para volver a la página de inicio">
+    <a href="https://walozarate.github.io">
+      <img src="/assets/img/projects/proj-1/osveloper-300x150.gif" width="300px" height="150px" align="center" alt="Haz clic aquí para volver a la página de inicio">
     </a>
     <div class="site-container">
       {% include header.html %}
