--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -1,29 +1,141 @@
+.fancyNav
+  
+  overflow: hidden
+  display: inline-block
+
+  li
+    background-color: #f0f0f0
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#fefefe), color-stop(0.5, #f0f0f0), color-stop(0.51, #e6e6e6))
+    background-image: -moz-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%)
+    background-image: -o-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%)
+    background-image: -ms-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%)
+    background-image: linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%)
+    border-right: 1px solid rgba(9, 9, 9, 0.125)
+
+    /* Adding a 1px inset highlight for a more polished efect:
+
+    box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset
+    -moz-box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset
+    -webkit-box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset
+    position: relative
+    float: left
+    list-style: none
+
+    &:after
+      /* This creates a pseudo element inslide each LI
+
+      content: '.'
+      text-indent: -9999px
+      overflow: hidden
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0
+      left: 0
+      z-index: 1
+      opacity: 0
+
+      /* Gradients!
+
+      background-image: -webkit-gradient(linear, left top, right top, from(rgba(168, 168, 168, 0.5)), color-stop(0.5, rgba(168, 168, 168, 0)), to(rgba(168, 168, 168, 0.5)))
+      background-image: -moz-linear-gradient(left, rgba(168, 168, 168, 0.5), rgba(168, 168, 168, 0) 50%, rgba(168, 168, 168, 0.5))
+      background-image: -o-linear-gradient(left, rgba(168, 168, 168, 0.5), rgba(168, 168, 168, 0) 50%, rgba(168, 168, 168, 0.5))
+      background-image: -ms-linear-gradient(left, rgba(168, 168, 168, 0.5), rgba(168, 168, 168, 0) 50%, rgba(168, 168, 168, 0.5))
+      background-image: linear-gradient(left, rgba(168, 168, 168, 0.5), rgba(168, 168, 168, 0) 50%, rgba(168, 168, 168, 0.5))
+
+      /* Creating borders with box-shadow. Useful, as they don't affect the size of the element.
+
+      box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff
+      -moz-box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff
+      -webkit-box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff
+
+      /* This will create a smooth transition for the opacity property
+
+      -moz-transition: 0.25s all
+      -webkit-transition: 0.25s all
+      -o-transition: 0.25s all
+      transition: 0.25s all
+
+    &:first-child
+      border-radius: 4px 0 0 4px
+
+      &:after
+        box-shadow: 1px 0 0 #a3a3a3,2px 0 0 #fff
+        -moz-box-shadow: 1px 0 0 #a3a3a3,2px 0 0 #fff
+        -webkit-box-shadow: 1px 0 0 #a3a3a3,2px 0 0 #fff
+        border-radius: 4px 0 0 4px
+
+    &.selected:first-child:after
+      box-shadow: 1px 0 0 #a3a3a3,2px 0 0 #fff
+      -moz-box-shadow: 1px 0 0 #a3a3a3,2px 0 0 #fff
+      -webkit-box-shadow: 1px 0 0 #a3a3a3,2px 0 0 #fff
+      border-radius: 4px 0 0 4px
+
+    &:last-child
+      border-radius: 0 4px 4px 0
+
+      &:after
+        box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff
+        -moz-box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff
+        -webkit-box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff
+        border-radius: 0 4px 4px 0
+
+    &.selected:last-child:after
+      box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff
+      -moz-box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff
+      -webkit-box-shadow: -1px 0 0 #a3a3a3,-2px 0 0 #fff
+      border-radius: 0 4px 4px 0
+
+    &:hover:after, &.selected:after, &:target:after
+      /* This property triggers the CSS3 transition
+      opacity: 1
+
+  &:hover li
+    &.selected:after, &:target:after
+      /* Hides the targeted li when we are hovering on the UL
+      opacity: 0
+
+  li
+    &.selected:hover:after, &:target:hover:after
+      opacity: 1 !important
+
+    a
+      color: #5d5d5d
+      display: inline-block
+      font: 20px/1 Lobster,Arial,sans-serif
+      padding: 12px 35px 14px
+      position: relative
+      text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6)
+      z-index: 2
+      text-decoration: none !important
+      white-space: nowrap
+
+  a.homeIcon
+    background: url('../img/home.png') no-repeat center center
+    display: block
+    overflow: hidden
+    padding-left: 12px
+    padding-right: 12px
+    text-indent: -9999px
+    width: 16px
+
 header
   height: 90px
   .logo
     float: left
-    margin: none
+    margin: 1px
     font:
       size: 24px
       weight: 700
     a
       display: inline-block
-      color: #fd0606f5
+      color: #fa220a
       &:hover
         color: $accent-color
   nav
     float: right
     margin: 30px 30px 0 0
-    a
-      display: inline-block
-      margin-left: 20px
-      color: rgba(0,0,0,1)
-      font:
-        size: 24px
-        weight: 700
-      &:hover
-        color: $accent-color
-
+        
 @media (max-width: 768px)
   header
     .logo
@@ -32,8 +144,3 @@ header
       margin: 0px
       margin-top: 18px
       float: left
-      a
-        margin-left: 0px
-        margin-right: 20px
-        font:
-          size: 16px
