changes page in maintenance

--- a/_layouts/DL.html
+++ b/_layouts/DL.html
@@ -2,4 +2,13 @@
 layout: default
 ---
 
-{% include deep.html %}
+<div align="center">  
+    <h4>OPS! Algo salió mal. Porfavor vuelva más tarde</h4>
+    <a href="https://walozarate.github.io">
+    <img src="assets/img/mantenimiento.jpeg">
+    </a>
+</div>
+
+
+
+<!--{% include deep.html %}-->
