--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,10 +31,12 @@
     {% seo %}
   </head>
   <body>
-    <a href="https://walozarate.github.io">
+    <div align="center">  
+      <a href="https://walozarate.github.io">
       <img src="/assets/img/projects/proj-1/osveloper-300x150.gif" width="300px" height="150px" 
       alt="Haz clic aquí para volver a la página de inicio">
-    </a>
+      </a>
+    </div>
     <div class="site-container">
       {% include header.html %}
       {{ content }}
