--- a/_layouts/CV.html
+++ b/_layouts/CV.html
@@ -2,4 +2,14 @@
 layout: default
 ---
 
-{% include computer.html %}
+<div align="center">  
+    <h4>OPS! Algo salió mal. Porfavor vuelva más tarde</h4>
+    <a href="https://walozarate.github.io">
+    <img src="assets/img/mantenimiento.jpeg">
+    </a>
+</div>
+
+
+
+
+<!--{% include computer.html %}-->
