--- a/_layouts/ML.html
+++ b/_layouts/ML.html
@@ -2,4 +2,15 @@
 layout: default
 ---
 
-{% include machine.html %}
+
+<div align="center">  
+    <h4>OPS! Algo salió mal. Porfavor vuelva más tarde</h4>
+    <a href="https://walozarate.github.io">
+    <img src="assets/img/mantenimiento.jpeg">
+    </a>
+</div>
+
+
+    
+
+<!--{% include machine.html %}-->
