--- a/_includes/cp2.html
+++ b/_includes/cp2.html
@@ -13993,7 +13993,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <center>
-    <img src="osveloper_final.gif" alt="logo"/>
+    <img src="/assets/img/projects/proj-1/osveloper-350x180.gif" alt="logo"/>
 </center>
 </div>
 </div>
