--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,18 @@
 <header>
-  <div class="logo">
+       <!--<div class="logo">
     <a href="{{ site.github.url }}/">{{ site.title }}</a>
-  </div>
-  <nav>
-    <ul class="fancyNav">
-        <li id="home"><a href="https://oswaldozarate.github.io" class="homeIcon">Home</a></li>
-        <li id="news"><a href="{{ site.github.url }}/">Proy APP</a></li>
-        <li id="about"><a href="{{ site.github.url }}/ml">Machine Learning</a></li>
-        <li id="services"><a href="{{ site.github.url }}/dl">Deep Learning</a></li>
-        <li id="contact"><a href="{{ site.github.url }}/cv">Comp Vision</a></li>
-        
-
-    </ul>
-  </nav>    
-    
+    </div>  -->
+       <nav>
+          <ul class="fancyNav">
+              <li id="home"><a href="https://oswaldozarate.github.io" class="homeIcon">Home</a></li>
+              <li id="news"><a href="{{ site.github.url }}/">APP's</a></li>
+              <li id="about"><a href="{{ site.github.url }}/ml">Análisis de Datos</a></li>
+              <li id="services"><a href="{{ site.github.url }}/dl">Machine Learning</a></li>
+              <li id="contact"><a href="{{ site.github.url }}/cv">Deep Learning</a></li>
+              <li id="contact"><a href="{{ site.github.url }}/cv">Computer Vision</a></li>
+          </ul>
+        </nav>    
+  
   <!--<nav>
     {% for item in site.data.settings.menu %}
       <a href="{{ site.github.url }}/{{ item.url }}">{{ item.name }}</a>
