--- a/_sass/3-sections/_default.sass
+++ b/_sass/3-sections/_default.sass
@@ -1,10 +1,11 @@
 body
-  background: white
+  background: #d4e1f5
   font-family: 'Roboto', sans-serif
   font-size: 16px
 .site-container
   width: 750px
   margin: auto
+  background: white
 
 @media (max-width: 768px)
   .site-container
