--- a/_sass/3-sections/_image.sass
+++ b/_sass/3-sections/_image.sass
@@ -18,9 +18,9 @@
     width: 100%
     opacity: 0
     //transition: .5s ease
-    background-color: rgba(255,255,255,0.05)
+    background-color: fade-out(#333, 0.5)
   .text
-    color: black
+    color: white
     font:
       size: 24px
       weight: 700
