--- a/_sass/3-sections/_projects.sass
+++ b/_sass/3-sections/_projects.sass
@@ -2,6 +2,7 @@
   max-width: 750px
   margin: 0px auto 0px
   padding: 30px
+  background: white
   +clearfix
   .project-unit
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
