--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -4,15 +4,15 @@
 //------------------------------------------------
 // Set some colors as sass variables
 
-$accent-color: #c9c5c5
-$accent: #c99065
+$accent-color: #20d241      //#c9c5c5   
+$accent: #4cba24
 $accent-light: adjust-hue(saturate(lighten($accent, 11%), 12.6%), 14%)
 $selectionColor: lighten($accent, 30%)
 
-$textColor: #666
-$headlineColor: #333
+$textColor: #0c0c0c                // text color original #666 //
+$headlineColor: #090909             // headline color original #333 //
 $bgcolor: #e5eaee
-$documentBackgroundColor: #fff
+$documentBackgroundColor: #ffffff
 
 @import '1-tools/-tools-dir'
 @import '2-base/-base-dir'
